# dinamo-marketing

./: .env.example  .gitignore  MARKETING_PLAN.md  PLAN.md  docker-compose.prod.yml  docker-compose.yml
.claude/: TEAM_TASKS.md
services/api/: Dockerfile  alembic.ini  conftest.py  pyproject.toml  seed_database.py
services/api/alembic/: env.py
services/api/alembic/versions/: 55b69628a121_initial_schema.py  a2f8c3d91e47_add_users_and_notifications.py  b3e7d1a42f59_add_studio_tables.py  c4f9e2b53a70_add_campaign_research_table.py  d5a1f3c64b81_add_platform_settings_table.py  e6b2d4f75c92_add_multi_tenant_rbac.py  f7c3e5d86a03_add_projects_table.py  g8d4f6e97b14_add_project_ai_context.py  h9e5g7f08c25_add_audit_log_and_subscriptions.py  i0f6h8g19d36_add_competitor_swot_analysis.py  j1g7i9h20e47_add_partners_table.py  k2h8j0i31f58_add_composite_analytics_indexes.py
services/api/app/: config.py  database.py  dependencies.py  main.py  seed.py
services/api/app/integrations/: __init__.py  base.py  openrouter.py  openrouter_insights.py  openrouter_studio.py  telegram.py
services/api/app/middleware/: logging.py  rate_limit.py  request_id.py  security.py
services/api/app/models/: __init__.py  academy.py  analytics.py  audit_log.py  campaign.py  campaign_research.py  channel.py  client.py  competitor.py  content.py  engagement.py  fan.py  market.py  media.py  notification.py  optimization.py  partner.py  platform_setting.py  project.py  report.py  sentiment.py  user.py
services/api/tests/: conftest.py  test_auth.py  test_health.py  test_notifications.py  test_rbac.py
(+325 files in other folders)
